Fixes #6: fallback for vertical alignment on IE8

--- a/sass/OI.modal.scss
+++ b/sass/OI.modal.scss
@@ -29,7 +29,8 @@ body.no-scroll {
     background-color: rgba(0,0,0,.8);
     
     .ie8-overlay {
-      position: absolute;
+      position: fixed;
+      z-index: 0;
       top: 0;
       left: 0;
       width: 100%;
